# discord-rpc-client.rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: discord_presence.rs  discord_presence_subscribe.rs
src/: error.rs  event_handler.rs
src/connection/: base.rs  manager.rs  unix.rs
src/models/: message.rs  rich_presence.rs
tests/fixtures/: activity_full.json
