[package]
authors     = ["Patrick Auernig <dev.patrick.auernig@gmail.com>"]
name        = "discord-rpc-client"
description = "A Rust client for Discord RPC."
keywords    = ["discord", "rpc", "ipc"]
license     = "MIT"
readme      = "README.md"
repository  = "https://gitlab.com/valeth/discord-rpc-client.rs.git"
version     = "0.3.0"
edition     = "2018"

[badges]
travis-ci   = { repository = "valeth/discord-rpc-client.rs" }
appveyor    = { repository = "valeth/discord-rpc-client.rs", service = "gitlab" }
maintenance = { status = "experimental" }

[dependencies]
serde             = "^1.0"
serde_derive      = "^1.0"
serde_json        = "^1.0"
byteorder         = "^1.3"
log               = "^0.4"
bytes             = "^1.0"
parking_lot       = "^0.11"
crossbeam-channel = "^0.5"
num-derive        = "^0.3"
num-traits        = "^0.2"

[target.'cfg(windows)'.dependencies]
named_pipe   = "0.4.1"

[dependencies.uuid]
version  = "^0.8"
features = ["v4"]

[dev-dependencies]
simplelog = "^0.10"
version-sync = "^0.9"

[features]
default = ["rich_presence"]
rich_presence = []
