[package]
authors     = ["Patrick Auernig <dev.patrick.auernig@gmail.com>"]
name        = "discord-rpc-client"
description = "A Rust client for Discord RPC."
keywords    = ["discord", "rpc", "ipc"]
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/yera-systems/discord-rpc-client.rs.git"
version     = "0.4.0"
edition     = "2021"

[badges]
maintenance = { status = "experimental" }

[dependencies]
serde             = "1.0"
serde_derive      = "1.0"
serde_json        = "1.0"
byteorder         = "1.5"
log               = "0.4"
crossbeam-channel = "0.5"
num-derive        = "0.4"
num-traits        = "0.2"

[target.'cfg(windows)'.dependencies]
named_pipe   = "0.4.1"

[dependencies.uuid]
version  = "1.11"
features = ["v4"]

[dev-dependencies]
simplelog = "0.12"
version-sync = "0.9"

[features]
default = ["rich_presence"]
rich_presence = []
